Switch from jpg to webp images for birds

--- a/birds/index.html
+++ b/birds/index.html
@@ -357,7 +357,7 @@
             <h2 class="category-title" data-loot="Legendary" data-color="#ffb347">Woodpeckers</h2>
             <div class="card-grid">
                 <article class="card">
-                    <img src="optimized_images/downy.jpg" alt="Downy Woodpecker" loading="lazy">
+                    <img src="optimized_images/downy.webp" alt="Downy Woodpecker" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Downy Woodpecker</h3>
                         <p class="scientific-name">Dryobates pubescens</p>
@@ -367,7 +367,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/red-bellied-woodpecker.jpg" alt="Red-bellied Woodpecker" loading="lazy">
+                    <img src="optimized_images/red-bellied-woodpecker.webp" alt="Red-bellied Woodpecker" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Red-bellied Woodpecker</h3>
                         <p class="scientific-name">Melanerpes carolinus</p>
@@ -377,7 +377,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/flicker.jpg" alt="Northern Flicker" loading="lazy">
+                    <img src="optimized_images/flicker.webp" alt="Northern Flicker" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Northern Flicker</h3>
                         <p class="scientific-name">Colaptes auratus</p>
@@ -395,7 +395,7 @@
             <h2 class="category-title" data-loot="Epic" data-color="#b39eb5">Winter Guild</h2>
             <div class="card-grid">
                 <article class="card">
-                    <img src="optimized_images/chickadee.jpg" alt="Black-capped Chickadee" loading="lazy">
+                    <img src="optimized_images/chickadee.webp" alt="Black-capped Chickadee" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Black-capped Chickadee</h3>
                         <p class="scientific-name">Poecile atricapillus</p>
@@ -405,7 +405,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/titmouse.jpg" alt="Tufted Titmouse" loading="lazy">
+                    <img src="optimized_images/titmouse.webp" alt="Tufted Titmouse" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Tufted Titmouse</h3>
                         <p class="scientific-name">Baeolophus bicolor</p>
@@ -415,7 +415,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/nuthatch.jpg" alt="Red-breasted Nuthatch" loading="lazy">
+                    <img src="optimized_images/nuthatch.webp" alt="Red-breasted Nuthatch" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Red-breasted Nuthatch</h3>
                         <p class="scientific-name">Sitta canadensis</p>
@@ -432,7 +432,7 @@
             <h2 class="category-title" data-loot="Uncommon" data-color="#A2E4BF">Bold & Colorful</h2>
             <div class="card-grid">
                 <article class="card">
-                    <img src="optimized_images/cardinal.jpg" alt="Northern Cardinal" loading="lazy">
+                    <img src="optimized_images/cardinal.webp" alt="Northern Cardinal" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Northern Cardinal</h3>
                         <p class="scientific-name">Cardinalis cardinalis</p>
@@ -442,7 +442,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/jay.jpg" alt="Blue Jay" loading="lazy">
+                    <img src="optimized_images/jay.webp" alt="Blue Jay" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Blue Jay</h3>
                         <p class="scientific-name">Cyanocitta cristata</p>
@@ -452,7 +452,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/robin.jpg" alt="American Robin" loading="lazy">
+                    <img src="optimized_images/robin.webp" alt="American Robin" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">American Robin</h3>
                         <p class="scientific-name">Turdus migratorius</p>
@@ -462,7 +462,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/red-winged-blackbird.jpg" alt="Red-winged Blackbird" loading="lazy">
+                    <img src="optimized_images/red-winged-blackbird.webp" alt="Red-winged Blackbird" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Red-winged Blackbird</h3>
                         <p class="scientific-name">Agelaius phoeniceus</p>
@@ -472,7 +472,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/goldfinch.jpg" alt="American Goldfinch" loading="lazy">
+                    <img src="optimized_images/goldfinch.webp" alt="American Goldfinch" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">American Goldfinch</h3>
                         <p class="scientific-name">Spinus tristis</p>
@@ -489,7 +489,7 @@
             <h2 class="category-title" data-loot="Rare" data-color="#aec6cf">Ground Crew</h2>
             <div class="card-grid">
                 <article class="card">
-                    <img src="optimized_images/junco.jpg" alt="Dark-eyed Junco" loading="lazy">
+                    <img src="optimized_images/junco.webp" alt="Dark-eyed Junco" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Dark-eyed Junco</h3>
                         <p class="scientific-name">Junco hyemalis</p>
@@ -499,7 +499,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/wren.jpg" alt="Carolina Wren" loading="lazy">
+                    <img src="optimized_images/wren.webp" alt="Carolina Wren" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Carolina Wren</h3>
                         <p class="scientific-name">Thryothorus ludovicianus</p>
@@ -516,7 +516,7 @@
             <h2 class="category-title" data-loot="Rare" data-color="#B0C4DE">Mimics</h2>
             <div class="card-grid">
                 <article class="card">
-                    <img src="optimized_images/catbird.jpg" alt="Gray Catbird" loading="lazy">
+                    <img src="optimized_images/catbird.webp" alt="Gray Catbird" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Gray Catbird</h3>
                         <p class="scientific-name">Dumetella carolinensis</p>
@@ -526,7 +526,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/mockingbird.jpg" alt="Northern Mockingbird" loading="lazy">
+                    <img src="optimized_images/mockingbird.webp" alt="Northern Mockingbird" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Northern Mockingbird</h3>
                         <p class="scientific-name">Mimus polyglottos</p>
@@ -543,7 +543,7 @@
             <h2 class="category-title" data-loot="Common" data-color="#D2B48C">Sparrows</h2>
             <div class="card-grid">
                 <article class="card">
-                    <img src="optimized_images/house-sparrow.jpg" alt="House Sparrow" loading="lazy">
+                    <img src="optimized_images/house-sparrow.webp" alt="House Sparrow" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">House Sparrow</h3>
                         <p class="scientific-name">Passer domesticus</p>
@@ -553,7 +553,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/song-sparrow.jpg" alt="Song Sparrow" loading="lazy">
+                    <img src="optimized_images/song-sparrow.webp" alt="Song Sparrow" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Song Sparrow</h3>
                         <p class="scientific-name">Melospiza melodia</p>
@@ -563,7 +563,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/white-throated-sparrow.jpg" alt="White-throated Sparrow" loading="lazy">
+                    <img src="optimized_images/white-throated-sparrow.webp" alt="White-throated Sparrow" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">White-throated Sparrow</h3>
                         <p class="scientific-name">Zonotrichia albicollis</p>
@@ -581,7 +581,7 @@
             <div class="card-grid">
 
                 <article class="card">
-                    <img src="optimized_images/house-finch.jpg" alt="House Finch" loading="lazy">
+                    <img src="optimized_images/house-finch.webp" alt="House Finch" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">House Finch</h3>
                         <p class="scientific-name">Haemorhous mexicanus</p>
@@ -591,7 +591,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/mourning-dove.jpg" alt="Mourning Dove" loading="lazy">
+                    <img src="optimized_images/mourning-dove.webp" alt="Mourning Dove" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Mourning Dove</h3>
                         <p class="scientific-name">Zenaida macroura</p>
@@ -601,7 +601,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/rock-pigeon.jpg" alt="Rock Pigeon" loading="lazy">
+                    <img src="optimized_images/rock-pigeon.webp" alt="Rock Pigeon" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Rock Pigeon</h3>
                         <p class="scientific-name">Columba livia</p>
@@ -618,7 +618,7 @@
             <h2 class="category-title" data-loot="Rare" data-color="#0077be">Waterfowl</h2>
             <div class="card-grid">
                 <article class="card">
-                    <img src="optimized_images/mallard.jpg" alt="Mallard" loading="lazy">
+                    <img src="optimized_images/mallard.webp" alt="Mallard" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Mallard</h3>
                         <p class="scientific-name">Anas platyrhynchos</p>
@@ -628,7 +628,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/canada-goose.jpg" alt="Canada Goose" loading="lazy">
+                    <img src="optimized_images/canada-goose.webp" alt="Canada Goose" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Canada Goose</h3>
                         <p class="scientific-name">Branta canadensis</p>
@@ -638,7 +638,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/mute-swan.jpg" alt="Mute Swan" loading="lazy">
+                    <img src="optimized_images/mute-swan.webp" alt="Mute Swan" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Mute Swan</h3>
                         <p class="scientific-name">Cygnus olor</p>
@@ -654,7 +654,7 @@
             <h2 class="category-title" data-loot="Rare" data-color="#4682B4">Estuary</h2>
             <div class="card-grid">
                 <article class="card">
-                    <img src="optimized_images/great-blue-heron.jpg" alt="Great Blue Heron" loading="lazy">
+                    <img src="optimized_images/great-blue-heron.webp" alt="Great Blue Heron" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Great Blue Heron</h3>
                         <p class="scientific-name">Ardea herodias</p>
@@ -664,7 +664,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/great-egret.jpg" alt="Great Egret" loading="lazy">
+                    <img src="optimized_images/great-egret.webp" alt="Great Egret" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Great Egret</h3>
                         <p class="scientific-name">Ardea alba</p>
@@ -673,7 +673,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/herring-gull.jpg" alt="Herring Gull" loading="lazy">
+                    <img src="optimized_images/herring-gull.webp" alt="Herring Gull" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Herring Gull</h3>
                         <p class="scientific-name">Larus argentatus</p>
@@ -690,7 +690,7 @@
             <h2 class="category-title" data-loot="Mythic" data-color="#E0115F">Apex</h2>
             <div class="card-grid">
                 <article class="card">
-                    <img src="optimized_images/hummingbird.jpg" alt="Ruby-throated Hummingbird" loading="lazy">
+                    <img src="optimized_images/hummingbird.webp" alt="Ruby-throated Hummingbird" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Ruby-throated Hummingbird</h3>
                         <p class="scientific-name">Archilochus colubris</p>
@@ -699,7 +699,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/red-tailed-hawk.jpg" alt="Red-tailed Hawk" loading="lazy">
+                    <img src="optimized_images/red-tailed-hawk.webp" alt="Red-tailed Hawk" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Red-tailed Hawk</h3>
                         <p class="scientific-name">Buteo jamaicensis</p>
@@ -709,7 +709,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/osprey.jpg" alt="Osprey" loading="lazy">
+                    <img src="optimized_images/osprey.webp" alt="Osprey" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Osprey</h3>
                         <p class="scientific-name">Pandion haliaetus</p>
@@ -725,7 +725,7 @@
             <h2 class="category-title" data-loot="Cursed" data-color="#ff6961">Pests</h2>
             <div class="card-grid">
                 <article class="card">
-                    <img src="optimized_images/starling.jpg" alt="European Starling" loading="lazy">
+                    <img src="optimized_images/starling.webp" alt="European Starling" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">European Starling</h3>
                         <p class="scientific-name">Sturnus vulgaris</p>
@@ -735,7 +735,7 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="optimized_images/grackle.jpg" alt="Common Grackle" loading="lazy">
+                    <img src="optimized_images/grackle.webp" alt="Common Grackle" loading="lazy">
                     <div class="card-content">
                         <h3 class="bird-name">Common Grackle</h3>
                         <p class="scientific-name">Quiscalus quiscula</p>
