--- a/games/index.html
+++ b/games/index.html
@@ -253,9 +253,9 @@
             </div>
 
             <div class="game-card">
-                <h2>🖼️ PNG vs JPG</h2>
-                <p>Can you tell the difference? Test your eyes and identify the higher quality image.</p>
-                <a href="png-vs-jpg.html" class="btn">PLAY NOW</a>
+                <h2>🖼️ High Fidelity</h2>
+                <p>Can you spot the compression? Test your eyes and identify the higher fidelity image.</p>
+                <a href="high-fidelity.html" class="btn">PLAY NOW</a>
             </div>
 
         </div>
