Add privacy policy

--- a/dislikes/index.html
+++ b/dislikes/index.html
@@ -235,6 +235,19 @@
         </div>
     </main>
 
+    <!-- Footer -->
+    <footer class="mt-auto py-8 border-t border-slate-200 bg-white">
+        <div
+            class="max-w-6xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center gap-4 text-sm text-slate-500">
+            <p>&copy; 2026 YouTube Dislikes. All rights reserved.</p>
+            <div class="flex items-center gap-6">
+                <a href="privacy.html" class="hover:text-red-600 transition-colors">Privacy policy</a>
+                <a href="https://github.com/jimmyorr/cowneck" target="_blank"
+                    class="hover:text-red-600 transition-colors">Source code</a>
+            </div>
+        </div>
+    </footer>
+
     <!-- Floating Action Buttons -->
     <button id="back-to-top"
         class="fixed bottom-8 right-8 p-3 bg-red-600 text-white rounded-full shadow-2xl hover:bg-red-700 transition-all duration-300 transform translate-y-2 opacity-0 pointer-events-none z-50 group">
