--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
             <a href="games/" class="link-games">games</a>
             <a href="birds/" class="link-birds">birds</a>
         </div>
+        <div style="margin-top: 40px; font-family: sans-serif; font-size: 0.8rem; color: #94a3b8;">
+            <a href="dislikes/privacy.html"
+                style="color: inherit; text-decoration: none; opacity: 0.6; transition: opacity 0.2s;"
+                onmouseover="this.style.opacity=1" onmouseout="this.style.opacity=0.6">Privacy policy</a>
+        </div>
     </div>
 </body>
 
