update privacy policy

--- a/dislikes/index.html
+++ b/dislikes/index.html
@@ -144,7 +144,7 @@
             </div>
             <h2 class="text-3xl font-bold text-slate-800 mb-3">Your disliked videos</h2>
             <p class="text-slate-500 max-w-md mx-auto mb-8">
-                Sign in to view a list of the last 50 videos you've disliked on YouTube. This tool uses the official
+                Sign in to view a list of videos you've disliked on YouTube. This tool uses the official
                 YouTube API to fetch your private rating history.
             </p>
             <button id="hero-auth-button" disabled
@@ -239,10 +239,9 @@
     <footer class="mt-auto py-8 border-t border-slate-200 bg-white">
         <div
             class="max-w-6xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center gap-4 text-sm text-slate-500">
-            <p>&copy; 2026 YouTube Dislikes. All rights reserved.</p>
             <div class="flex items-center gap-6">
                 <a href="privacy.html" class="hover:text-red-600 transition-colors">Privacy policy</a>
-                <a href="https://github.com/jimmyorr/cowneck" target="_blank"
+                <a href="https://github.com/jimmyorr/cowneck/tree/main/dislikes" target="_blank"
                     class="hover:text-red-600 transition-colors">Source code</a>
             </div>
         </div>
