--- a/games/index.html
+++ b/games/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cowneck</title>
+    <title>cowneck games</title>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RNVL7JZVJ"></script>
     <script>
@@ -173,7 +173,7 @@
 
 <body>
     <header>
-        <h1>Cowneck</h1>
+        <h1>cowneck games</h1>
         <p class="subtitle">Select a game to load</p>
     </header>
 
