--- a/dislikes/privacy.html
+++ b/dislikes/privacy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy policy - YouTube Dislikes</title>
+    <title>Privacy policy - Dislikes</title>
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RNVL7JZVJ"></script>
@@ -61,7 +61,7 @@
                     Introduction
                 </h3>
                 <p class="text-slate-600 leading-relaxed">
-                    YouTube Dislikes ("we", "us", or "our") is committed to protecting your privacy. This Privacy policy
+                    Dislikes ("we", "us", or "our") is committed to protecting your privacy. This Privacy policy
                     explains how our application accesses, uses, and protects your Google user data when you use our
                     service.
                 </p>
@@ -158,7 +158,7 @@
     </main>
 
     <footer class="py-12 text-center text-sm text-slate-400">
-        <p>&copy; 2026 YouTube Dislikes. All rights reserved.</p>
+        <p>&copy; 2026 Dislikes. All rights reserved.</p>
     </footer>
 
 </body>
